# flappy

./: LICENSE  README.md  pyproject.toml
data/: flappy_ai.pt
flappy/: flappy.py
flappy/game/: __init__.py  bird.py  game.py  pipe.py
flappy/learning/: model.py  train.py  utils.py
